Fixed white space + Images width

--- a/CSS/components/sections.css
+++ b/CSS/components/sections.css
@@ -159,6 +159,10 @@
         font-size: 1rem;
     }
 
+    .image-button-container {
+        width: 100%;
+    }
+
     .block-image {
         width: 90%;
         height: auto;
